--- a/app/src/main/res/layout/activity_participant_requests.xml
+++ b/app/src/main/res/layout/activity_participant_requests.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent"
     tools:context=".contest.Contest_Evaluation.Participant_Request">
     <RelativeLayout
@@ -16,7 +17,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@+id/rqst"
         android:id="@+id/recycler_view4">
 
