--- a/app/src/main/res/layout/layout_bottom_sheet_sendupdate.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet_sendupdate.xml
@@ -10,16 +10,15 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="15dp"
+        android:padding="10dp"
         android:text="Send Message to Participants"
-        android:textSize="22sp"
+        android:textSize="18sp"
         android:textColor="@color/black"
-        android:textStyle="bold"
         android:gravity="center_horizontal"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@color/grey"
+        android:background="@color/scheme8"
         android:layout_marginBottom="10dp"/>
 
         <EditText
@@ -27,6 +26,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/msg"
             android:hint="Enter Message"
+            android:background="@drawable/rectangular_border"
             android:textAlignment="textStart"
             android:padding="20dp"
             android:layout_marginLeft="10dp"
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="This message will be send to your participants."
-        android:textSize="18sp"
+        android:textSize="15sp"
         android:gravity="center"
 
         android:textColor="@color/black"/>
@@ -67,7 +67,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Send"
-        android:textSize="22sp"
+        android:padding="5dp"
+        android:textSize="18sp"
         android:textColor="#03A9F4"
         android:id="@+id/send"
         android:layout_gravity="center"
@@ -76,8 +77,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cancel"
-        android:textSize="22sp"
+        android:textSize="18sp"
         android:textColor="#000000"
+        android:padding="5dp"
         android:id="@+id/cancel"
         android:layout_gravity="center"
         android:layout_margin="10dp"
