--- a/app/src/main/res/layout/layout_request_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_request_bottom_sheet.xml
@@ -15,12 +15,11 @@
         android:text="Participant Detail"
         android:textSize="20sp"
         android:textColor="@color/black"
-        android:textStyle="bold"
         android:gravity="center_horizontal"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@color/grey"
+        android:background="@color/scheme8"
         android:layout_marginBottom="10dp"/>
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -50,25 +49,28 @@
         android:padding="10dp"
         android:id="@+id/collegeLinear"
 
+        android:weightSum="1"
         android:layout_marginBottom="10dp"
         android:orientation="horizontal">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="College/School: "
-        android:textStyle="bold"
-        android:textColor="@color/black"/>
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="KIET"
-            android:id="@+id/collegeBs"
+            android:text="College/School:"
+            android:layout_weight=".28"
             android:textColor="@color/black"/>
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Kiet"
+            android:id="@+id/collegeBs"
+            android:layout_weight="0.6"
+            android:textColor="@color/black"/>
+        <TextView
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="see ID card"
+            android:layout_weight="0.2"
             android:gravity="right"
             android:id="@+id/idBs"
             android:textColor="#03A9F4"/>
@@ -82,7 +84,6 @@
         android:id="@+id/submissionBs"
         android:layout_gravity="center"
         android:layout_marginBottom="20dp"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -95,9 +96,8 @@
             android:text="Allow"
             android:textSize="18sp"
             android:id="@+id/allow"
-            android:textStyle="bold"
             android:layout_margin="20dp"
-            android:textColor="#29C32F" />
+            android:textColor="#03A9F4" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -106,7 +106,6 @@
 
             android:id="@+id/reject"
             android:textSize="18sp"
-            android:textStyle="bold"
             android:textColor="#F44336"
              />
 
