--- a/app/src/main/res/layout/rank_list_item.xml
+++ b/app/src/main/res/layout/rank_list_item.xml
@@ -27,7 +27,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="1"
+                    android:text=""
                     android:textColor="@color/black"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="4dp"
